# WikiSearch

./: .devdbrc  README.md  api.py  config.toml  construct_next_word_dawg.py  construct_word_dawg.py  evaluate.py  initial_crawling.py  initial_index_construction.py  main.py  pyproject.toml  requirements.txt
docs/presentation/: slides.html
docs/presentation/static/css/: webslides.css
docs/text/: ir.tex  main.tex
scripts/: construct_next_word_dawg.py  initial_index_construction.py
sql/: create_structure.sql  db.sql  delete.sql
ui/: gui.py
ui/static/: main.html  script.js  scripts.js  search.html
ui/static/css/: aside.css  index.css  results.css  search.css  style.css  styles.css
ui/templates/: base.html  index.html  search.html
wikisearch/autocomplete/: autocompletion_service.py
wikisearch/crawler/: crawler.py  shared_buffer.py  wiki_processor.py
wikisearch/db/: database_connection.py
wikisearch/document/: document_service.py
wikisearch/eval/: evaluator.py  query_generator.py
wikisearch/eval/elastic/: evaluator.py  query_generator.py
wikisearch/eval/wiki/: evaluator.py
wikisearch/index/: embeddings_generator.py  faiss_semantic_index.py  inverted_index.py  old_inverted_index.py  usearch_semantic_index.py
wikisearch/indexer/: embeddings_generator.py  index_constructor.py  interfaces.py  inverted_index.py  old_inverted_index.py  semantic_index.py
wikisearch/nlp/: nlp.py
wikisearch/spell/: generate_dictionary_from_corpora.py  hunspell_checker.py  manual_spellchecker.py  spellchecker_service.py
wikisearch/summary/: summary_service.py
